# nextpy

./: .coverage  .gitignore  LICENSE  MANIFESTO.md  README.md  config.🤖   me.txt  notices  prompt_on_the_outside.🖊️  pyproject.toml  requirements.txt
  .devcontainer/: devcontainer.json
.agent/: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: check_generated_pyi.yml  integration_app_harness.yml  unit_tests.yml
ai-notebooks/: agent_cli.py  agentbox.ipynb  test_autoscrum.ipynb  test_chain_of_thought.ipynb  test_direct_llm.ipynb  test_prd.ipynb  test_salesgpt.ipynb  tutorial.ipynb
ai-notebooks/autoscrum/: __init__.py  __main__.py  autoscrum.py
ai-notebooks/chainlit/: chainlit_example.py
ai-notebooks/giftshop/: run.py
ai-notebooks/prd_agent/: prd.py
ai-notebooks/salesGPT/: agent.py
ai-notebooks/streamlit/: streamlit_example.py
app-examples/center-aligned-portfolio/: requirements.txt  xtconfig.py
app-examples/charting-examples/: xtconfig.py
app-examples/dalle/: .gitignore  requirements.txt  xtconfig.py
app-examples/gallery/: .gitignore  requirements.txt  xtconfig.py
app-examples/gridx_portfolio/: .gitignore  requirements.txt  xtconfig.py
app-examples/llm_eval_plotly/: xtconfig.py
app-examples/mapping/: xtconfig.py
app-examples/nextpy-chat/: .gitignore  requirements.txt  xtconfig.py
app-examples/portfolio/: xtconfig.py
app-examples/portfolio-centered-design/: xtconfig.py
app-examples/rest_api_server/: xtconfig.py
app-examples/simple_animation/: xtconfig.py
app-examples/simple_chat/: xtconfig.py
app-examples/simple_crud/: .gitignore  README.md  requirements.txt  xtconfig.py
app-examples/todo/: xtconfig.py
app-examples/unstyled_example/: xtconfig.py
demo/: agent_cli.py  agentbox.ipynb  test.py  test_autoscrum.ipynb  test_prd.ipynb  test_salesgpt.ipynb
demo/autoscrum/: __init__.py  __main__.py  autoscrum.py  test.json
demo/chainlit/: chainlit_example.py
demo/giftshop/: readme.md  run.py
demo/prd_agent/: prd.py
demo/salesGPT/: Readme.md  agent.py  prompt.hbs
demo/scraping_agent/: llm_parser.py  main.py  playwright_scraping.py  schemas.py
demo/streamlit/: streamlit_example.py
docker-example/: Caddy.Dockerfile  Dockerfile  README.md  compose.yaml  requirements.txt
docs/ai/: 01_engine.md  02_chain_of_thought.md  03_memory.md  Engine.md
docs/backend/: 1_state_intro.md  2_state_basics.md  3_client_side_state.md  4_substates.md  5_event.md  6_var.md  7_var_operations.md  9.rest_api.md  9_api_endpoint.md
docs/data/: 01_Intro.md  02_Tables.md  03_keys.md  04_advaced_data_types.md  05_Queries.md  06_Relationships.md  07_jsonDB.md  jsondb.md
docs/frontend/: 01_components.md  02_style_basics.md  03_advanced_styling.md  04_custom_stylesheet.md  04_dark_mode.md  06_assets.md  06_pages.md
docs/get_started/: 01_nextpy_app_in_20_mins.md  01_nextpy_quickstart.md
docs/learn_by_building_apps/: 01_nextpy_with_codespaces.md  01_nextpy_with_github_spaces.md  02_state_with_mood_app.md  2_state_mood_app.md
docs/references/: README.md  __init___reference.md  app_reference.md
dotagent/: __init__.py  cli.py  config.py  schema.py  text_splitter.py
dotagent/agent/: base_agent.py  chat.py  completion.py
dotagent/caches/: _cache.py  _chromacache.py  _memorycache.py
dotagent/compiler/: __init__.py  _grammar.py  _program.py  _program_executor.py  _utils.py  _variable_stack.py
dotagent/fact_check/: __init__.py  factool.py  tasks.py
dotagent/finetune/: LLMFinetune.py  openai_finetune.py
dotagent/helpers/: awslambda.py  bibtex.py  bingsearch.py  ducksearch.py  googleplaces.py  googlesearch.py  googleserper.py  graphql.py  openweatherMap.py  sceneexplain.py  serpapi.py  sql_database.py  twilio.py  wolframalpha.py  youtubeSearch.py  youtubeTranscript.py
dotagent/image_gen/: stable_diffusion.py
dotagent/knowledgebase/: base.py  doc_loader.py
dotagent/llms/: __init__.py  _llm.py  _openai.py  _transformers.py
dotagent/load/: serializable.py
dotagent/memory/: __init__.py  base.py  buffer_summary.py  in_memory.py  read_only.py  summary.py
dotagent/tools/: basetool.py
dotagent/utils/: __init__.py  prompt.py  summary.py  utils.py
dotagent/vectorstores/: __init__.py  base.py  chroma.py  deeplake.py  pinecone.py  qdrant.py  redis.py
integration/: __init__.py  conftest.py  test_background_task.py  test_call_script.py  test_client_storage.py  test_connection_banner.py  test_dynamic_routes.py  test_event_actions.py  test_event_chain.py  test_form_submit.py  test_input.py  test_login_flow.py  test_server_side_event.py  test_table.py  test_upload.py  test_var_operations.py  utils.py
integration/benchmarks/: benchmarks.py  helpers.py  test_compile_benchmark.py
nextpy/: __init__.py  __init__.pyi  __main__.py  app.py  app.pyi  base.py  cli.py
openagent/: __init__.py  cli.py  config.py  schema.py  text_splitter.py
openams/: __init__.py  schema.py  text_splitter.py
playground/: agentbox.ipynb  agentbox.py  agentbox01.py  config_test.py  exported_config.agent  exported_config.json  me.txt  summary_memory_testing.py  test-memory.ipynb  test_autoscrum.ipynb  test_chainlit.py  test_chats_llm.ipynb  test_cli.py  test_database_sql.py  test_factcheck.ipynb  test_factcheck.py  test_import_export.ipynb  test_newagent.ipynb  test_pekb_.ipynb  test_pen.py  test_prd.ipynb  test_simple_prompt.py  test_summary.ipynb  test_youtube.py  text-comp-to-chat.ipynb
scripts/: benchmarks.sh  pyi_generator.py  remove_pycache_and_empty_dirs.py  wait_for_listening_port.py
t/: xtconfig.py
test/: chat_element_test.ipynb  container1_test.ipynb  container_test.ipynb  data.ipynb  hello.css  input_widget_test.ipynb  media_test.ipynb  state_test.ipynb  typography_test.ipynb
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_app.py  test_base.py  test_cli.py  test_config.py  test_db_config.py  test_event.py  test_imports.py  test_model.py  test_prerequisites.py  test_route.py  test_state.py  test_style.py  test_telemetry.py  test_testing.py  test_var.py  utils.py  xtconfig.py
(+3857 files in other folders)
