[tool.poetry]
name = "openagent"
version = "0.1.0"
description = ""
authors = ["Team Dotagent <team@openagent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.1"
aiohttp = "^3.8.4"
aioresponses = "^0.7.4"
aleph_alpha_client = "^3.2"
apify_client = "^1.3.1"
asyncer = "^0.0.2"
auth0_python = "^4.4"
beautifulsoup4 = "^4.12.2"
bibtexparser = "^1.4"
boto3 = "^1.26"
chainlit = "0.6.2"
chromadb = "^0.3.26"
click = "^8.1.3"
dataclasses_json = "^0.5.8"
docarray = "^0.37"
docx2txt = "^0.8"
ebooklib = "^0.18"
fastapi = "^0.97.0"
fastapi_socketio = "^0.0.10"
feedparser = "^6.0.10"
filetype = "^1.2"
fitz = "^0.0.1-dev2"
gql = "^3.4.1"
html2text = "^2020.1.16"
httpx = "^0.24"
huggingface_hub = "^0.16.4"
InstructorEmbedding = "^1.0.1"
ipykernel = "^6.25"
ipython = "^8.14"
jsonschema = "^4.18"
lxml = "^4.9.3"
matplotlib = ">=3.7.2,<4.0.0"
metal_sdk = "^2.0.1"
msal = "^1.22"
nbconvert = "^7.7"
nest_asyncio = "^1.5"
nltk = "^3.8.1"
numpy = "^1.25.1"
openapi_schema_pydantic = "^1.2.4"
opendal = "^0.39"
pandas = "^1.4.0"
pexpect = "^4.8"
Pillow = { version = "^9.5" }
platformdirs = "^3.10"
playwright = "^1.36"
praw = "^7.7.1"
protobuf = "^4.23"
pydantic = "^1.10"
pydub = "^0.25"
pygtrie = "^2.5"
pymilvus = "^2.2"
pyowm = "^3.3"
pyparsing = ">=2.3.1,<3.1"
pytesseract = "^0.3"
pytest = "^7.4"
python-dotenv = "^1.0"
python-socketio = "^5.8"
python_graphql_client = "^0.4.3"
PyYAML = { version = ">=6.0", extras = ["^6.0.1"] }
rdflib = "^7.0"
regex = "^2023.6"
reportlab = "^4.0"
responses = "^0.23"
retrying = "^1.3"
scikit_learn = "^1.3"
sentence_transformers = "^2.2"
sentencepiece = "^0.1.99"
spacy = "^3.6"
SQLAlchemy = "^2.0"
starlette = ">=0.27.0,<0.28.0"
svglib = "^1.5"
syncer = "^2.0"
tenacity = "^8.2"
tiktoken = "^0.4"
tomli = "^2.0"
tqdm = "^4.65"
trafilatura = "^1.6"
typing_extensions = "^4.7"
uptrace = "^1.19"
uvicorn = "^0.22.0"
watchfiles = "^0.19"
zep_python = "^0.34"
flask = "^2.3.2"
diskcache = "^5.6.1"
google-search-results = "^2.4.2"
jupyter = "^1.0.0"

[tool.poetry.scripts]
openagent = "openagent.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
